--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-router-hash-link": "^2.4.3",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.21.4",
